# fireCRaCer

./: Dockerfile.kernel  Dockerfile.ubuntu22  README.md  fireCRaCer.sh  makeKernel.sh  makeRootFS.sh
docker/: config.damon.6.1.patch  config.damon.patch  firecracker_id_rsa  firecracker_id_rsa.pub
tools/: .bashrc  crac-resource-policies.yaml  crac_init.sh  criu_actions.sh  fc_log_timestamp.c  get_maps.sh  kill  mem_mapping.sh  ro_init.sh  virt2phys.c
tools/SuspendResumeAgent/src/cpp/: SuspendResumeAgent.cpp
tools/SuspendResumeAgent/src/java/: manifest.mf
tools/SuspendResumeAgent/src/java/io/simonis/: SuspendResumeAgent.java
tools/SuspendResumeAgent/src/java/io/simonis/crac/: CheckpointException.java  Context.java  Core.java  Resource.java  RestoreException.java
tools/SuspendResumeAgent/src/java/io/simonis/crac/impl/: FirecrackerContext.java
tools/SuspendResumeAgent/src/java/io/simonis/utils/: Logger.java
tools/UffdVisualizer/src/io/simonis/: UffdVisualizer.java
tools/uffd/: Cargo.toml
tools/uffd/src/: uffd_utils.rs
