[package]
name = "uffd"
version = "1.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"

[dependencies]

libc = ">=0.2.39"
nix = "0.23.0"
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
vmm-sys-util = ">=0.8.0"
userfaultfd = ">=0.4.0"
hole-punch = "0.0.3"
getopt = "1.1.3"

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
