[package]
name = "uffd"
version = "1.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"

[dependencies]

libc = ">=0.2.39"
nix = { version = ">=0.27" }
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
vmm-sys-util = ">=0.8.0"
userfaultfd = { version = ">=0.7.0", features = ["linux4_14"] }
# We need the following until https://github.com/fastly/userfaultfd-rs/issues/31 will be fixed.
# userfaultfd = { git = "https://github.com/rw/userfaultfd-rs", branch = "patch-1" }
hole-punch = "0.0.3"
getopt = "1.1.3"
lazy_static = "1.4.0"

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
